--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -8,10 +8,24 @@
     box-sizing: border-box;
 }
 
+.noti-count {
+    display: none;
+    position: absolute;
+    right: 32px;
+    background: #0de00d;
+    border-radius: 15px;
+    padding: 2px;
+    font-size: 10px;
+  }
+
 /****** login form *****/
 .login-form {
     box-shadow: 2px 1px 2px 3px #ddd;
     background-color: white;
+}
+
+.login-form input {
+    height: 50px;
 }
 
 .fw-600 {
@@ -31,6 +45,32 @@
     background-image: linear-gradient(180deg, #0d6efd, #3a3de2);
 }
 
+.h-50px {
+    height: 50px;
+}
+
+.noti {
+    padding: 22px;
+    box-shadow: 0px 1px 0px 0px #ddd;
+    color: #4d4d4d;
+}
+
+.noti:hover {
+    background: #bdc7ff;
+    border-radius: 0;
+    color: #284fec;
+}
+
+input+.error,
+select+.error {
+    color: red;
+}
+
+.select2-container {
+
+    z-index: 9999;
+}
+
 /***********  model right **********/
 .modal-right .modal-dialog {
     position: fixed;
@@ -42,6 +82,12 @@
     -o-transform: translate3d(0%, 0, 0);
     transform: translate3d(0%, 0, 0);
     right: 0;
+}
+
+.modal-right .modal-header {
+    background-image: linear-gradient(180deg, #0d6efd, #3a3de2);
+    border-radius: 0;
+    color: white;
 }
 
 .modal-right .modal-content {
